--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "vue-cli-service lint",
     "debug": "http-server -p 3000 dist/",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
-    "postpublish": "git add CHANGELOG.md && git commit -m 'chore: changelog [ci skip]' && git push"
+    "push": "git add CHANGELOG.md && git commit -m 'chore: changelog [ci skip]' && git push",
+    "commit": "git-cz"
   },
   "dependencies": {
     "core-js": "^3.6.4",
@@ -30,22 +31,31 @@
     "@vue/eslint-config-airbnb": "^5.0.2",
     "babel-eslint": "^10.1.0",
     "conventional-changelog-cli": "^2.0.34",
+    "cz-conventional-changelog": "^3.2.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^7.0.0-alpha.0",
+    "husky": "^4.2.5",
     "lint-staged": "^10.2.2",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
-    "vue-cli-plugin-vue-next": "~0.1.2",
-    "yorkie": "^2.0.0"
+    "vue-cli-plugin-vue-next": "~0.1.2"
   },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "npm run changelog && npm run push"
+    }
   },
   "lint-staged": {
     "*.{js,vue}": [
       "vue-cli-service lint",
       "git add"
     ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
