--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "debug": "http-server -p 3000 dist/",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
-    "push": "git add CHANGELOG.md && git commit -m 'chore: changelog [ci skip]' && git push",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
+    "push": "git add CHANGELOG.md && git commit -m 'chore: changelog [ci skip]'",
     "commit": "git-cz"
   },
   "dependencies": {
@@ -43,7 +43,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
+      "pre-commit": "lint-staged && npm run changelog",
       "pre-push": "npm run changelog && npm run push"
     }
   },
