--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "debug": "http-server -p 3000 dist/",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
-    "push": "git add CHANGELOG.md && git commit -m 'chore: changelog [ci skip]'",
-    "commit": "git-cz"
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -p",
+    "prepush": "git add CHANGELOG.md && git commit -m 'chore: changelog [ci skip]'",
+    "commit": "git-cz",
+    "push": "npm run changelog && npm run prepush && git push"
   },
   "dependencies": {
     "core-js": "^3.6.4",
@@ -43,8 +44,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && npm run changelog",
-      "pre-push": "npm run changelog && npm run push"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
