--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "debug": "http-server -p 3000 dist/",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -p",
-    "prepush": "git add CHANGELOG.md && git commit -m 'chore: changelog [ci skip]'",
-    "commit": "git-cz",
-    "push": "npm run changelog && npm run prepush && git push"
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "version": "git add CHANGELOG.md && git commit -m 'chore: changelog [ci skip]'",
+    "commit": "git-cz"
   },
   "dependencies": {
     "core-js": "^3.6.4",
